@@ -3,12 +3,13 @@ package com.almaengi.be.domain.store.controller;
 import com.almaengi.be.domain.store.dto.StoreEmployeeRequestDto;
 import com.almaengi.be.domain.store.dto.StoreEmployeeResponseDto;
 import com.almaengi.be.domain.store.service.StoreEmployeeService;
-import com.almaengi.be.global.common.ApiResponse;
+import com.almaengi.be.domain.store.type.StoreEmployeeStatus;
 import com.almaengi.be.global.config.SecurityConfig;
 import com.almaengi.be.global.error.BusinessException;
 import com.almaengi.be.global.error.ErrorCode;
 import com.almaengi.be.global.security.jwt.JwtAuthenticationFilter;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.hamcrest.Matchers;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,161 +18,201 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.FilterType;
 import org.springframework.http.MediaType;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.test.web.servlet.MockMvc;
-import org.hamcrest.Matchers;
+
+import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import java.util.Collections;
-import java.util.List;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.authentication;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(controllers = StoreEmployeeController.class, excludeFilters = {
-                // 커스텀 보안 필터가 테스트에 영향을 주는 것을 방지 (단순 컨트롤러 매핑 테스트 목적)
-                @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, classes = { SecurityConfig.class,
-                                JwtAuthenticationFilter.class })
+        @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, classes = {SecurityConfig.class, JwtAuthenticationFilter.class})
 })
 class StoreEmployeeControllerTest {
 
-        @Autowired
-        private MockMvc mockMvc;
+    @Autowired
+    private MockMvc mockMvc;
 
-        @Autowired
-        private ObjectMapper objectMapper;
+    @Autowired
+    private ObjectMapper objectMapper;
 
-        @MockBean
-        private StoreEmployeeService storeEmployeeService;
+    @MockBean
+    private StoreEmployeeService storeEmployeeService;
 
-        @Test
-        @DisplayName("매장 초대 코드 발급 API - 응답 형태 검증")
-        void generateInviteCode() throws Exception {
-                // given
-                Long storeId = 1L;
-                Long userId = 1L;
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                                userId, null, Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")));
+    @Test
+    @DisplayName("매장 초대 코드 발급 API - 응답 형태 검증")
+    void generateInviteCode() throws Exception {
+        Long userId = 1L;
+        Long storeId = 1L;
+        UsernamePasswordAuthenticationToken auth = auth(userId);
 
-                StoreEmployeeResponseDto.InviteCodeInfo mockResponse = StoreEmployeeResponseDto.InviteCodeInfo.builder()
-                                .inviteCode("A1B2C3")
-                                .expiredAt("2023-12-31T23:59:59")
-                                .build();
+        StoreEmployeeResponseDto.InviteCodeInfo response = StoreEmployeeResponseDto.InviteCodeInfo.builder()
+                .inviteCode("A1B2C3")
+                .expiredAt("2026-03-27T22:00:00")
+                .build();
 
-                given(storeEmployeeService.generateInviteCode(any(), eq(storeId))).willReturn(mockResponse);
+        given(storeEmployeeService.generateInviteCode(any(), eq(storeId))).willReturn(response);
 
-                // when & then
-                mockMvc.perform(post("/api/v1/stores/{storeId}/invite-code", storeId)
-                                .with(csrf()) // POST에 막히지 않도록 csrf 토큰 처리
-                                .with(authentication(auth)))
-                                .andDo(print())
-                                .andExpect(status().isOk())
-                                .andExpect(jsonPath("$.status").value("SUCCESS"))
-                                .andExpect(jsonPath("$.data.inviteCode").value("A1B2C3"))
-                                .andExpect(jsonPath("$.data.expiredAt").value("2023-12-31T23:59:59"));
-        }
+        mockMvc.perform(post("/api/v1/stores/{storeId}/invite-code", storeId)
+                        .with(csrf())
+                        .with(authentication(auth)))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("SUCCESS"))
+                .andExpect(jsonPath("$.data.inviteCode").value("A1B2C3"));
+    }
 
-        @Test
-        @DisplayName("매장 합류하기 (직원 등록) API - 응답 형태 검증")
-        void joinStore() throws Exception {
-                // given
-                Long userId = 2L;
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                                userId, null, Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")));
+    @Test
+    @DisplayName("매장 합류 신청 API - 응답 형태 검증")
+    void joinStore() throws Exception {
+        Long userId = 2L;
+        UsernamePasswordAuthenticationToken auth = auth(userId);
 
-                StoreEmployeeRequestDto.Join request = new StoreEmployeeRequestDto.Join();
-                org.springframework.test.util.ReflectionTestUtils.setField(request, "inviteCode", "A1B2C3");
+        StoreEmployeeRequestDto.Join request = new StoreEmployeeRequestDto.Join();
+        org.springframework.test.util.ReflectionTestUtils.setField(request, "inviteCode", "A1B2C3");
 
-                StoreEmployeeResponseDto.EmployeeInfo mockResponse = StoreEmployeeResponseDto.EmployeeInfo.builder()
-                                .employeeId(10L)
-                                .userId(userId)
-                                .name("김알바")
-                                .build();
+        StoreEmployeeResponseDto.EmployeeInfo response = StoreEmployeeResponseDto.EmployeeInfo.builder()
+                .employeeId(10L)
+                .userId(userId)
+                .name("김알바")
+                .status(StoreEmployeeStatus.WAITING)
+                .build();
 
-                given(storeEmployeeService.joinStore(any(), any(StoreEmployeeRequestDto.Join.class)))
-                                .willReturn(mockResponse);
+        given(storeEmployeeService.joinStore(any(), any(StoreEmployeeRequestDto.Join.class))).willReturn(response);
 
-                // JSON 직렬화를 위해 ObjectMapper 사용
-                String requestJson = objectMapper.writeValueAsString(request);
+        mockMvc.perform(post("/api/v1/stores/employees/join")
+                        .with(csrf())
+                        .with(authentication(auth))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("SUCCESS"))
+                .andExpect(jsonPath("$.data.employeeId").value(10L))
+                .andExpect(jsonPath("$.data.status").value("WAITING"));
+    }
 
-                // when & then
-                mockMvc.perform(post("/api/v1/stores/employees/join")
-                                .with(csrf())
-                                .with(authentication(auth))
-                                .contentType(MediaType.APPLICATION_JSON)
-                                .content(requestJson))
-                                .andDo(print())
-                                .andExpect(status().isOk())
-                                .andExpect(jsonPath("$.status").value("SUCCESS"))
-                                .andExpect(jsonPath("$.data.employeeId").value(10L))
-                                .andExpect(jsonPath("$.data.name").value("김알바"));
-        }
+    @Test
+    @DisplayName("직원 합류 승인 API - 응답 형태 검증")
+    void approveEmployee() throws Exception {
+        Long ownerId = 1L;
+        Long storeId = 10L;
+        Long employeeId = 200L;
+        UsernamePasswordAuthenticationToken auth = auth(ownerId);
 
-        @Test
-        @DisplayName("매장 직원 목록 조회 API - 사장 포함 목록 응답 형태 검증")
-        void getStoreEmployees() throws Exception {
-                // given
-                Long storeId = 1L;
-                Long userId = 101L; // 요청자(직원)
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                                userId, null, Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")));
+        StoreEmployeeResponseDto.EmployeeInfo response = StoreEmployeeResponseDto.EmployeeInfo.builder()
+                .employeeId(employeeId)
+                .userId(2L)
+                .name("김알바")
+                .status(StoreEmployeeStatus.WORKING)
+                .build();
 
-                StoreEmployeeResponseDto.EmployeeInfo ownerInfo = StoreEmployeeResponseDto.EmployeeInfo.builder()
-                                .employeeId(null)
-                                .userId(1L)
-                                .name("사장님")
-                                .position("사장님")
-                                .build();
+        given(storeEmployeeService.approveEmployee(any(), eq(storeId), eq(employeeId))).willReturn(response);
 
-                StoreEmployeeResponseDto.EmployeeInfo employeeInfo = StoreEmployeeResponseDto.EmployeeInfo.builder()
-                                .employeeId(10L)
-                                .userId(102L)
-                                .name("김알바")
-                                .position("평일 오전")
-                                .build();
+        mockMvc.perform(patch("/api/v1/stores/{storeId}/employees/{employeeId}/approve", storeId, employeeId)
+                        .with(csrf())
+                        .with(authentication(auth)))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("SUCCESS"))
+                .andExpect(jsonPath("$.data.status").value("WORKING"));
+    }
 
-                given(storeEmployeeService.getStoreEmployees(any(), eq(storeId)))
-                                .willReturn(List.of(ownerInfo, employeeInfo));
+    @Test
+    @DisplayName("매장 직원 목록 조회 API - 응답 형태 검증")
+    void getStoreEmployees() throws Exception {
+        Long userId = 101L;
+        Long storeId = 1L;
+        UsernamePasswordAuthenticationToken auth = auth(userId);
 
-                // when & then
-                mockMvc.perform(get("/api/v1/stores/{storeId}/employees", storeId)
-                                .with(authentication(auth)))
-                                .andDo(print())
-                                .andExpect(status().isOk())
-                                .andExpect(jsonPath("$.status").value("SUCCESS"))
-                                .andExpect(jsonPath("$.data.length()").value(2))
-                                .andExpect(jsonPath("$.data[0].userId").value(1L))
-                                .andExpect(jsonPath("$.data[0].name").value("사장님"))
-                                .andExpect(jsonPath("$.data[0].employeeId").value(Matchers.nullValue()))
-                                .andExpect(jsonPath("$.data[1].employeeId").value(10L))
-                                .andExpect(jsonPath("$.data[1].name").value("김알바"));
-        }
+        StoreEmployeeResponseDto.EmployeeInfo ownerInfo = StoreEmployeeResponseDto.EmployeeInfo.builder()
+                .employeeId(null)
+                .userId(1L)
+                .name("사장님")
+                .position("사장님")
+                .build();
+        StoreEmployeeResponseDto.EmployeeInfo employeeInfo = StoreEmployeeResponseDto.EmployeeInfo.builder()
+                .employeeId(10L)
+                .userId(102L)
+                .name("김알바")
+                .position("평일 오전")
+                .build();
 
-        @Test
-        @DisplayName("매장 직원 목록 조회 API - 권한 없음 예외 응답 검증")
-        void getStoreEmployees_Unauthorized() throws Exception {
-                // given
-                Long storeId = 1L;
-                Long userId = 999L;
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                                userId, null, Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")));
+        given(storeEmployeeService.getStoreEmployees(any(), eq(storeId))).willReturn(List.of(ownerInfo, employeeInfo));
 
-                given(storeEmployeeService.getStoreEmployees(any(), eq(storeId)))
-                                .willThrow(new BusinessException(ErrorCode.UNAUTHORIZED_USER));
+        mockMvc.perform(get("/api/v1/stores/{storeId}/employees", storeId)
+                        .with(authentication(auth)))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("SUCCESS"))
+                .andExpect(jsonPath("$.data.length()").value(2))
+                .andExpect(jsonPath("$.data[0].employeeId").value(Matchers.nullValue()))
+                .andExpect(jsonPath("$.data[1].employeeId").value(10L));
+    }
 
-                // when & then
-                mockMvc.perform(get("/api/v1/stores/{storeId}/employees", storeId)
-                                .with(authentication(auth)))
-                                .andDo(print())
-                                .andExpect(status().isForbidden())
-                                .andExpect(jsonPath("$.status").value(ErrorCode.UNAUTHORIZED_USER.getCode()))
-                                .andExpect(jsonPath("$.message").value(ErrorCode.UNAUTHORIZED_USER.getMessage()));
-        }
+    @Test
+    @DisplayName("상태별 직원 목록 조회 API - enum status 쿼리 전달 검증")
+    void getStatusEmployees() throws Exception {
+        Long ownerId = 1L;
+        Long storeId = 10L;
+        UsernamePasswordAuthenticationToken auth = auth(ownerId);
+
+        StoreEmployeeResponseDto.EmployeeInfo bestEmployee = StoreEmployeeResponseDto.EmployeeInfo.builder()
+                .employeeId(20L)
+                .userId(2L)
+                .name("우수직원")
+                .status(StoreEmployeeStatus.BEST)
+                .build();
+
+        given(storeEmployeeService.getStatusEmployees(any(), eq(storeId), eq(StoreEmployeeStatus.BEST)))
+                .willReturn(List.of(bestEmployee));
+
+        mockMvc.perform(get("/api/v1/stores/{storeId}/employees/status", storeId)
+                        .queryParam("status", "BEST")
+                        .with(authentication(auth)))
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("SUCCESS"))
+                .andExpect(jsonPath("$.data.length()").value(1))
+                .andExpect(jsonPath("$.data[0].status").value("BEST"));
+    }
+
+    @Test
+    @DisplayName("상태별 직원 목록 조회 API - 권한 없음 예외 응답 검증")
+    void getStatusEmployeesUnauthorized() throws Exception {
+        Long userId = 999L;
+        Long storeId = 10L;
+        UsernamePasswordAuthenticationToken auth = auth(userId);
+
+        given(storeEmployeeService.getStatusEmployees(any(), eq(storeId), eq(StoreEmployeeStatus.WAITING)))
+                .willThrow(new BusinessException(ErrorCode.UNAUTHORIZED_USER));
+
+        mockMvc.perform(get("/api/v1/stores/{storeId}/employees/status", storeId)
+                        .queryParam("status", "WAITING")
+                        .with(authentication(auth)))
+                .andDo(print())
+                .andExpect(status().isForbidden())
+                .andExpect(jsonPath("$.status").value(ErrorCode.UNAUTHORIZED_USER.getCode()))
+                .andExpect(jsonPath("$.message").value(ErrorCode.UNAUTHORIZED_USER.getMessage()));
+    }
+
+    private UsernamePasswordAuthenticationToken auth(Long userId) {
+        return new UsernamePasswordAuthenticationToken(
+                userId,
+                null,
+                Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+        );
+    }
 }
